--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Jessica Taetle's Personal Website</h1>
         <div class="nav">
-            <a href="home.html" class="nav-element">Home</a>
+            <a href="index.html" class="nav-element">Home</a>
             <a href="resume.html" class="nav-element">Resume</a>
             <a href="projects.html" class="nav-element">Projects</a>
             <a href="contact.html" class="nav-element">Contact</a>
