mostly functioning nav bar on the home page

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     </head>
     <body>
         <h1>Jessica Taetle's Personal Website</h1>
-        <div class="nav">
-            <a href="index.html" class="nav-element">Home</a>
-            <a href="resume.html" class="nav-element">Resume</a>
-            <a href="projects.html" class="nav-element">Projects</a>
-            <a href="contact.html" class="nav-element">Contact</a>
-        </div>
-        <img src="images/78122771_2403486773092967_5219476581470175232_n.jpg" width=250 height=250/>
+        <ul class="nav">
+            <li class="nav active"><a href="index.html">Home</a></li>
+            <li class="nav nav-element"><a href="resume.html">Resume</a></li>
+            <li class="nav nav-element"><a href="projects.html">Projects</a></li>
+            <li class="nav nav-element"><a href="contact.html">Contact</a></li>
+        </ul>
+        <img src="images/78122771_2403486773092967_5219476581470175232_n.jpg" width=250 height=250}/>
         <p>Hello! My name is Jessica Taetle. I am a fourth year Computational Media major with the threads: People and Interaction Design. I hope to pursue a career in UI/UX design and implementation. Enjoy my website!</p>
     </body>
 </html>
