working nav all pages

--- a/projects.html
+++ b/projects.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <h1>JT</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="resume.html">Resume</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+        <ul class="nav">
+            <li class="nav nav-element"><a href="index.html">Home</a></li>
+            <li class="nav nav-element"><a href="resume.html">Resume</a></li>
+            <li class="nav active"><a href="projects.html">Projects</a></li>
+            <li class="nav nav-element"><a href="contact.html">Contact</a></li>
+        </ul>
     </body>
 </html>
