changing of font and home page

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
         <link rel="stylesheet" href="css/stylesheet.css"/>
     </head>
     <body>
-        <h1>Jessica Taetle's Personal Website</h1>
+         <h2 class="header">JT</h2>
         <ul class="nav">
             <li class="nav active"><a href="index.html">Home</a></li>
             <li class="nav nav-element"><a href="resume.html">Resume</a></li>
             <li class="nav nav-element"><a href="projects.html">Projects</a></li>
             <li class="nav nav-element"><a href="contact.html">Contact</a></li>
         </ul>
-        <img src="images/78122771_2403486773092967_5219476581470175232_n.jpg" width=250 height=250}/>
-        <p>Hello! My name is Jessica Taetle. I am a fourth year Computational Media major with the threads: People and Interaction Design. I hope to pursue a career in UI/UX design and implementation. Enjoy my website!</p>
+        <h1>Welcome to Jessica Taetle's Website</h1>
+        <img src="images/78122771_2403486773092967_5219476581470175232_n.jpg" width=350 height=350 style="float: left;"}/>
+        <p>Hello! My name is Jessica Taetle. I am a fourth year Computational Media major with the threads: People and Interaction Design. I hope to pursue a career in UI/UX design and implementation. I am currently looking for an internship for Summer 2021. Enjoy my website!</p>
     </body>
 </html>
