--- a/projects.html
+++ b/projects.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" href="css/stylesheet.css"/>
     </head>
     <body>
-        <h1>JT</h1>
+        <h2 class="header">JT</h2>
         <ul class="nav">
-            <li class="nav nav-element"><a href="index.html">Home</a></li>
+            <li class="nav active"><a href="index.html">Home</a></li>
             <li class="nav nav-element"><a href="resume.html">Resume</a></li>
-            <li class="nav active"><a href="projects.html">Projects</a></li>
+            <li class="nav nav-element"><a href="projects.html">Projects</a></li>
             <li class="nav nav-element"><a href="contact.html">Contact</a></li>
         </ul>
     </body>
