fonts, redo navigation, change projects to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Contact</title>
+        <title>Projects</title>
         <link rel="stylesheet" href="css/stylesheet.css"/>
     </head>
     <body>
-        <ul class="nav">
+         <ul class="nav">
             <h2 class="header"><a href="index.html" style="text-decoration: none, color">JT</a></h2>
-            <li class="nav active"><a href="contact.html">Contact</a></li>
-            <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
+            <li class="nav nav-element"><a href="contact.html">Contact</a></li>
+            <li class="nav active"><a href="portfolio.html">Portfolio</a></li>
             <li class="nav nav-element"><a href="resume.html">Resume</a></li>
             <li class="nav nav-element"><a href="index.html">Home</a></li>
         </ul>
