--- a/resume.html
+++ b/resume.html
@@ -6,12 +6,21 @@
         <link rel="stylesheet" href="css/stylesheet.css"/>
     </head>
     <body>
-       <h2 class="header">JT</h2>
         <ul class="nav">
-            <li class="nav active"><a href="index.html">Home</a></li>
-            <li class="nav nav-element"><a href="resume.html">Resume</a></li>
-            <li class="nav nav-element"><a href="projects.html">Projects</a></li>
+            <h2 class="header"><a href="index.html" style="text-decoration: none, color">JT</a></h2>
             <li class="nav nav-element"><a href="contact.html">Contact</a></li>
+            <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
+            <li class="nav active"><a href="resume.html">Resume</a></li>
+            <li class="nav nav-element"><a href="index.html">Home</a></li>
         </ul>
+        <div class="section" style="margin-top: 30px;">
+            <h2 class="section-header">Objective: </h2>
+            <p>To further my software development skills and gain practical real-world experience by securing a challenging internship in Summer 2020.</p>
+        </div>
+        <div class="section">
+            <h2 class="section-header">Education: </h2>
+            <p class="accent-header" style="background-color: #BB86FC;">[UNDERGRADUATE DEGREE]</p><p>|</p><p class="accent-header" style="float: right">GEORGIA INSTITUTE OF TECHNOLOGY</p>
+            <p></p>
+        </div>
     </body>
 </html>
