finished resume page

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Contact</title>
         <link rel="stylesheet" href="css/stylesheet.css"/>
+        <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <ul class="nav">
