--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Home</title>
         <link rel="stylesheet" href="css/stylesheet.css"/>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <ul class="nav">
@@ -15,9 +15,10 @@
             <li class="nav active"><a href="index.html">Home</a></li>
         </ul>
 <!--        <h1>Welcome to Jessica Taetle's Website</h1>-->
-        <div class="section">
-            <img src="images/78122771_2403486773092967_5219476581470175232_n.jpg" width=350 height=350 style="float: left;"}/>
-            <p style="margin-left: 355px;">Hello! My name is Jessica Taetle. I am a fourth year Computational Media major with the threads: People and Interaction Design. I hope to pursue a career in UI/UX design and implementation. I am currently looking for an internship for Summer 2021. Enjoy my website!</p>
+        <div class="section" >
+             <p>Hello! My name is Jessica Taetle. I am a fourth year Computational Media major with the threads: People and Interaction Design. I hope to pursue a career in UI/UX design and implementation. I am currently looking for an internship for Summer 2021. Enjoy my website!</p>
+            <p>hello</p>
+            <img src="images/78122771_2403486773092967_5219476581470175232_n.jpg" width=600 height=600 class="center-image"/>
         </div>
     </body>
 </html>
