--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Resume</title>
         <link rel="stylesheet" href="css/stylesheet.css"/>
+        <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <ul class="nav">
@@ -19,8 +20,29 @@
         </div>
         <div class="section">
             <h2 class="section-header">Education: </h2>
-            <p class="accent-header" style="background-color: #BB86FC;">[UNDERGRADUATE DEGREE]</p><p>|</p><p class="accent-header" style="float: right">GEORGIA INSTITUTE OF TECHNOLOGY</p>
-            <p></p>
+            <p class="accent-header">[UNDERGRADUATE DEGREE]</p>
+            <p class="accent-second-header">[GEORGIA INSTITUTE OF TECHNOLOGY. GPA: 3.52]</p>
+            <p>[ 2017 - 2022 ]</p>
+            <p>Computational Media Major.</p>
+            <p>Concentrations: People and Interaction Design</p>
+            <p>Relevant Coursework: Data Structures and Algorithms, Intro to Object-Oriented Programming, Media Device Architecture, Intro to Computtational Media</p>
+            <p>&nbsp;</p>
+            <p class="accent-header">[HIGH SCHOOL]</p>
+            <p class="accent-second-header">[THE GALLOWAY SCHOOL. GPA: 4.1]</p>
+            <p>[ 2010 - 2017 ]</p>
+            <p>This school is an independent, coed school in Atlanta, Georgia that teaches on the principles of discovery, deliberate, daring, and dynamic</p>
+        </div>
+        <div class="section">
+            <h2 class="section-header">Experience: </h2>
+             <p class="accent-header">[SOFTWARE ENGINEERING INTERN]</p>
+            <p class="accent-second-header">[RED CANARY]</p>
+            <p>[ MAY 2020 - AUGUST 2020 ]</p>
+            <p>Red Canary is an outcome-focused security operations partner for modern teams, deployed in minutes to reduce rick and improve security. During my time as an intern, I improved Red Canary's testing framework using RSpec so that flaky tests would fail less often, and regularly handled GitHub issues that were assigned to me including: making the Red Canary logo compatible with dark mode, removing the linkage between Red Canary accounts and depreciated salesforce data, and fixing the timing of provisioning emails to clients.</p>
+            <p class="accent-header">[ENGINEERING CO-OP]</p>
+            <p class="accent-second-header">[FULLSTORY]</p>
+            <p>&nbsp;</p>
+            <p>[ JANUARY 2019 - DECEMBER 2019 ]</p>
+            <p>FullStory offers digital experience analytics, on-the-fly conversion funnels, advanced search capabilities, video-like replay of real user sessions, and robust debugging and developer tools. During my time as a Co-Op, I designed a program to track deployments of new code via Go using the API of GitHub, Slack, and Google Sheets, implemented several UI components in React, and assisted in converting the entire front end framework to React including an 'Export as CSV' button</p>
         </div>
     </body>
 </html>
