--- a/resume.html
+++ b/resume.html
@@ -38,11 +38,34 @@
             <p class="accent-second-header">[RED CANARY]</p>
             <p>[ MAY 2020 - AUGUST 2020 ]</p>
             <p>Red Canary is an outcome-focused security operations partner for modern teams, deployed in minutes to reduce rick and improve security. During my time as an intern, I improved Red Canary's testing framework using RSpec so that flaky tests would fail less often, and regularly handled GitHub issues that were assigned to me including: making the Red Canary logo compatible with dark mode, removing the linkage between Red Canary accounts and depreciated salesforce data, and fixing the timing of provisioning emails to clients.</p>
+            <p>&nbsp;</p>
             <p class="accent-header">[ENGINEERING CO-OP]</p>
             <p class="accent-second-header">[FULLSTORY]</p>
-            <p>&nbsp;</p>
             <p>[ JANUARY 2019 - DECEMBER 2019 ]</p>
             <p>FullStory offers digital experience analytics, on-the-fly conversion funnels, advanced search capabilities, video-like replay of real user sessions, and robust debugging and developer tools. During my time as a Co-Op, I designed a program to track deployments of new code via Go using the API of GitHub, Slack, and Google Sheets, implemented several UI components in React, and assisted in converting the entire front end framework to React including an 'Export as CSV' button</p>
+        </div>
+        <div class="section">
+            <h2 class="section-header">Skills:</h2>
+            <p class="accent-second-header">[PROFICIENT]</p>
+            <ul>
+                <li>React.js</li>
+                <li>Redux.js</li>
+                <li>HTML 5</li>
+                <li>CSS</li>
+                <li>Java</li>
+                <li>Python</li>
+            </ul>
+            <p class="accent-second-header">[COMPETENT] </p>
+            <ul>
+                <li>Ruby on Rails</li>
+                <li>Go</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2 class="section-header">Activities:</h2>
+            <p class="accent-header">[AMBASSADOR]</p>
+            <p class="accent-second-header">[COMPUTATIONAL MEDIA AMBASSADOR]</p>
+            <p> The CM Ambassadors serve as the voice of current and potential Computational Media students. Their mission is to improve the CM curriculum and community by representing concerns, building awareness of events and opportunities, bridging the gap between faculty and students, and unifying the student body.</p>
         </div>
     </body>
 </html>
