--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
+        <h1>Jessica Taetle's Website</h1>
         <ul class="nav">
             <h2 class="header"><a href="index.html" style="text-decoration: none, color">JT</a></h2>
             <li class="nav nav-element"><a href="contact.html">Contact</a></li>
