a few more resume edits

--- a/resume.html
+++ b/resume.html
@@ -66,7 +66,7 @@
             <h2 class="section-header">Activities:</h2>
             <p class="accent-header">[BACKPACKING INSTRUCTOR]</p>
             <p class="accent-second-header">[OUTDOOR RECREATION AT GEORGIA TECH]</p>
-            <p> Is in the process of learning how to lead participants on backpacking trips in the southeastern United States. This requires understanding risk management, working with other staff, and cultivating wilderness stewardship among the participants.</p>
+            <p>Is in the process of learning how to lead participants on backpacking trips in the southeastern United States. This requires teaching outdoor skills to the Georgia Tech community voluntarily on weeks, and also requires working to mitigate risk by actively educating fellow staff and participants</p>
             <p>&nbsp;</p>
             <p class="accent-header">[AMBASSADOR]</p>
             <p class="accent-second-header">[COMPUTATIONAL MEDIA AMBASSADOR]</p>
