--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Jessica Taetle's Website</h1>
+        <h1>Jessica Taetle</h1>
         <ul class="nav">
             <h2 class="header"><a href="index.html" style="text-decoration: none, color">JT</a></h2>
             <li class="nav active"><a href="contact.html">Contact</a></li>
@@ -15,5 +15,13 @@
             <li class="nav nav-element"><a href="resume.html">Resume</a></li>
             <li class="nav nav-element"><a href="index.html">Home</a></li>
         </ul>
+        <div class="section">
+            <h2 class="section-header">Email </h2>
+            <p>My Email is <a href="mailto:jtaetle@gatech.edu">jtaetle@gatech.edu</a>. Please email for any business inquiries!</p>
+        </div>
+        <div class="section">
+            <h2 class="section-header">Social Media </h2>
+            <p>Please add me as a connection on <a href="https://www.linkedin.com/in/jessica-taetle-32b390163/">LinkedIn</a>, and feel free to look at my <a href="https://github.com/jessicataetle">GitHub</a> to keep up to date with my current projects! </p>
+        </div>
     </body>
 </html>
