--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Jessica Taetle's Website</h1>
+        <h1>Jessica Taetle</h1>
         <ul class="nav">
             <h2 class="header"><a href="index.html" style="text-decoration: none, color">JT</a></h2>
             <li class="nav nav-element"><a href="contact.html">Contact</a></li>
@@ -15,9 +15,9 @@
             <li class="nav active"><a href="resume.html">Resume</a></li>
             <li class="nav nav-element"><a href="index.html">Home</a></li>
         </ul>
-        <div class="section" style="margin-top: 30px;">
+        <div class="section">
             <h2 class="section-header">Objective: </h2>
-            <p>To further my software development skills and gain practical real-world experience by securing a challenging internship in Summer 2021.</p>
+            <p>To further my software development skills or design skills and gain practical real-world experience by securing a challenging internship in Summer 2021.</p>
         </div>
         <div class="section">
             <h2 class="section-header">Education: </h2>
@@ -26,7 +26,7 @@
             <p>[ 2017 - 2022 ] | [ Atlanta, Georgia ]</p>
             <p>Computational Media Major.</p>
             <p>Concentrations: People and Interaction Design</p>
-            <p>Relevant Coursework: Data Structures and Algorithms, Introduction to Object-Oriented Programming, Media Device Architecture, Introduction to Computtational Media, Junior Design</p>
+            <p>Relevant Coursework: Data Structures and Algorithms, Introduction to Object-Oriented Programming, Media Device Architecture, Introduction to Computational Media, Junior Design</p>
             <p>&nbsp;</p>
             <p class="accent-header">[HIGH SCHOOL]</p>
             <p class="accent-second-header">[THE GALLOWAY SCHOOL. GPA: 4.1]</p>
@@ -54,10 +54,12 @@
                 <li>HTML 5</li>
                 <li>CSS</li>
                 <li>Java</li>
-                <li>Python</li>
+                <li>Adobe Photoshop</li>
+                <li>Git</li>
             </ul>
             <p class="accent-second-header">[COMPETENT] </p>
             <ul>
+                <li>Python</li>
                 <li>Ruby on Rails</li>
                 <li>Go</li>
             </ul>
@@ -66,11 +68,11 @@
             <h2 class="section-header">Activities:</h2>
             <p class="accent-header">[BACKPACKING INSTRUCTOR]</p>
             <p class="accent-second-header">[OUTDOOR RECREATION AT GEORGIA TECH]</p>
-            <p>Is in the process of learning how to lead participants on backpacking trips in the southeastern United States. This requires teaching outdoor skills to the Georgia Tech community voluntarily on weeks, and also requires working to mitigate risk by actively educating fellow staff and participants</p>
+            <p>In the process of learning how to lead participants on backpacking trips in the Southeastern United States. The training includes teaching outdoor skills to the Georgia Tech community, and also working to mitigate outdoor risks by actively educating fellow staff and participants.</p>
             <p>&nbsp;</p>
             <p class="accent-header">[AMBASSADOR]</p>
-            <p class="accent-second-header">[COMPUTATIONAL MEDIA AMBASSADOR]</p>
-            <p> The CM Ambassadors serve as the voice of current and potential Computational Media students. Their mission is to improve the CM curriculum and community by representing concerns, building awareness of events and opportunities, bridging the gap between faculty and students, and unifying the student body.</p>
+            <p class="accent-second-header">[COMPUTATIONAL MEDIA ("CM") AMBASSADOR]</p>
+            <p> The CM Ambassadors serve as the voice of current and potential new Computational Media students. Our mission is to improve the CM curriculum and community.  The CM’s ambassador role includes representing concerns, building awareness of events and opportunities, bridging the gap between faculty and students, and unifying the student body.</p>
         </div>
     </body>
 </html>
