--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Jessica Taetle's Website</h1>
+        <h1>Jessica Taetle</h1>
         <ul class="nav">
             <h2 class="header"><a href="index.html" style="text-decoration: none, color">JT</a></h2>
             <li class="nav nav-element"><a href="contact.html">Contact</a></li>
@@ -15,11 +15,12 @@
             <li class="nav nav-element"><a href="resume.html">Resume</a></li>
             <li class="nav active"><a href="index.html">Home</a></li>
         </ul>
-<!--        <h1>Welcome to Jessica Taetle's Website</h1>-->
-        <div class="section" >
-             <p>Hello! My name is Jessica Taetle. I am a fourth year Computational Media major with the threads: People and Interaction Design. I hope to pursue a career in UI/UX design and implementation. I am currently looking for an internship for Summer 2021. Enjoy my website!</p>
-            <p>hello</p>
-            <img src="images/78122771_2403486773092967_5219476581470175232_n.jpg" width=600 height=600 class="center-image"/>
+        <div style="display: block">
+            <div class="section">
+                <h2 class="home-header"style="float: left; width: 40%">Hello! My name is Jessica Taetle.</h2>
+                <img src="media/78122771_2403486773092967_5219476581470175232_n.jpg" width=45% height=45% class="center-image"/>
+                <p style="float: left; width: 50%"> I am a fourth year Computational Media major with the threads: People and Interaction Design. I hope to pursue a career in UI/UX design and implementation. I am currently looking for an internship for Summer 2021. Enjoy my website!</p>
+            </div>
         </div>
     </body>
 </html>
