change width and clean up home page

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         </ul>
         <div style="display: block">
             <div class="section">
-                <h2 class="home-header"style="float: left; width: 40%">Hello! My name is Jessica Taetle.</h2>
                 <img src="media/78122771_2403486773092967_5219476581470175232_n.jpg" width=45% height=45% class="center-image"/>
-                <p style="float: left; width: 50%"> I am a fourth year Computational Media major with the threads: People and Interaction Design. I hope to pursue a career in UI/UX design and implementation. I am currently looking for an internship for Summer 2021. Enjoy my website!</p>
+                <h2 class="home-header">Hello! My name is Jessica Taetle.</h2>
+                <p> I am a fourth year Computational Media major. A with the threads: People and Interaction Design. I hope to pursue a career in UI/UX design and implementation. I am currently looking for an internship for Summer 2021. Enjoy my website!</p>
+                
             </div>
         </div>
     </body>
