--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <div style="display: block">
             <h2 class="home-header">About</h2>
             <div class="section">
-                <img src="media/78122771_2403486773092967_5219476581470175232_n.jpg" width=50% height=50% class="center-image"/>
-                <p> Hello! My name is Jessica Taetle. I am a fourth year at the Georgia Institute of Technology, and my anticipated graduation date is May 2022</p>
-                <h3 class="section-header">I am  a Computational Media Major.</h3>
-                <p>This major allows me to not only take computer science classes, but also allows me to further my education past that into disciplines that compliment my computer science knowledge.</p>
-                <p>My concentrations are: People and Interaction Design, which allows me to focus on User Interace Implementation and Design, which is a field I am interested in pursuing after college.</p>
-                <h3 class="section-header">I am currently looking for an internship for Summer 2021.</h3>
+                <img src="media/78122771_2403486773092967_5219476581470175232_n.jpg" width=50% height=40% class="center-image"/>
+                <h3 class="section-header" style="margin-top: 5px">Hello! My name is Jessica Taetle.</h3>
+                <p>I am a fourth year at the Georgia Institute of Technology, and my anticipated graduation date is May 2022</p>
+                <h3 class="section-header" style="margin-top: 5px">I am  a Computational Media Major.</h3>
+                <p>This major allows me to not only take computer science classes, but also allows me to further my education past that into disciplines that compliment my computer science knowledge. My concentrations are: People and Interaction Design, which allows me to focus on User Interace Implementation and Design, which is a field I am interested in pursuing after college.</p>
+               <h3 class="section-header" style="margin-top: 5px">I am currently looking for an internship for Summer 2021.</h3>
             </div>
         </div>
     </body>
