--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
             <h2 class="portfolio-section-header">Coding</h2>
             <div class="section">
                 <h2 class="section-header">jessicataetle.github.io</h2>
-                <p>This website is a project for my Introduction to Computational Media class. It is a project that I will continue to add to throughout the semester. Right now, it is purely HTML and CSS, but I hope to add in some React.js and Redux.js components as I continue to to develop it!</p>
+                <p style="margin-bottom: 5px">This website is a project for my Introduction to Computational Media class that I will continue to add to throughout the semester. Right now, it is purely HTML and CSS, but I hope to add in some React.js and Redux.js components as I continue to to develop it!</p>
                 <p class="accent-second-header"><a href="https://github.com/jessicataetle/jessicataetle.github.io">Click here to view Github Repository</a></p>
             </div>
             <div class="section">
                 <h2 class="section-header">Casanova</h2>
-                <p>For my Media Device Architecture class, the final project was to make a Game Boy Advance from scratch in C. I chose to create a game called Casanova, which is based on a bird "casanova" looking for love. Here is the video presentation of me playing the game and explaining it in more detail:</p>
-                <iframe class="portfolio-media" height="315" src="https://www.youtube.com/embed/6jKdeP3tkfI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p>For my Media Device Architecture class, the final project was to make a Game Boy Advance game in C. I chose to create Casanova, which is a game based on a bird "casanova" looking for love. Here is the video presentation of me playing the game and explaining it in more detail:</p>
+                <iframe class="portfolio-media" height="315px" src="https://www.youtube.com/embed/6jKdeP3tkfI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p style="margin-bottom: 10px; margin-top: 10px"><a href="media/Project.gba" class="accent-header">Click here to Download Casanova</a> (You will need an emulator such as <a href="http://openemu.org/">OpenEmu</a> to play it)</p>
                 <p class="accent-second-header"><a href="https://github.com/cs2261-gt/final-project-jtaetle">Click Here to View GitHub Repository</a></p>
             </div>
