--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="section" style="display: table">
             <img src="media/78122771_2403486773092967_5219476581470175232_n.jpg" class="center-image"/>
             <div style="float: left; width: 50%; margin-right: 0px" >
-                <h3 class="section-header" style="margin-top: 5px;">Hello! My name is Jessica Taetle.</h3>
-                <p>I am a fourth year at the Georgia Institute of Technology, and my anticipated graduation date is May 2022.</p>
-                <h3 class="section-header" style="margin-top: 5px">I am a Computational Media Major.</h3>
+                <h3 class="home-second-header">Hello! My name is Jessica Taetle.</h3>
+                <p>I am a fourth year at the Georgia Institute of Technology, and my anticipated graduation date is May, 2022.</p>
+                <h3 class="home-second-header">I am a Computational Media Major.</h3>
                 <p>This major allows me to not only take computer science classes, but also allows me to further my education into disciplines that compliment my computer science knowledge. My concentrations areas are: People and Interaction Design, which allows me to focus on User Interace Implementation and Design, a field I am interested in pursuing after college.</p>
-               <h3 class="section-header" style="margin-top: 5px">I am currently looking for an internship for Summer 2021.</h3>
+               <h3 class="home-second-header">I am currently looking for an internship for Summer 2021.</h3>
             </div>
         </div>
     </body>
