--- a/portfolio.html
+++ b/portfolio.html
@@ -7,40 +7,50 @@
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Jessica Taetle</h1>
-         <ul class="nav">
-            <h2 class="header"><a href="index.html" style="text-decoration: none">JT</a></h2>
-            <li class="nav nav-element"><a href="contact.html">Contact</a></li>
-            <li class="nav active"><a href="portfolio.html">Portfolio</a></li>
-            <li class="nav nav-element"><a href="resume.html">Resume</a></li>
-            <li class="nav nav-element"><a href="index.html">Home</a></li>
-        </ul>
-        <div style="display: block">
+        <header>
+            <h1>Jessica Taetle</h1>
+        </header>
+        <nav>
+             <ul class="nav">
+                <h2 class="header"><a href="index.html">JT</a></h2>
+                <li class="nav nav-element"><a href="contact.html">Contact</a></li>
+                <li class="nav active"><a href="portfolio.html">Portfolio</a></li>
+                <li class="nav nav-element"><a href="resume.html">Resume</a></li>
+                <li class="nav nav-element"><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+        <article>
             <h2 class="portfolio-section-header">Coding</h2>
-            <div class="section">
-                <h2 class="section-header">jessicataetle.github.io</h2>
-                <p style="margin-bottom: 5px">This website is a project for my Introduction to Computational Media class that I will continue to add to throughout the semester. Right now, it is purely HTML and CSS, but I hope to add in some React.js and Redux.js components as I continue to to develop it!</p>
-                <p class="accent-second-header"><a href="https://github.com/jessicataetle/jessicataetle.github.io">Click here to view Github Repository</a></p>
-            </div>
-            <div class="section">
-                <h2 class="section-header">Casanova</h2>
-                <p>For my Media Device Architecture class, the final project was to make a Game Boy Advance game in C. I chose to create Casanova, which is a game based on a bird "casanova" looking for love. Here is the video presentation of me playing the game and explaining it in more detail:</p>
-                <iframe class="portfolio-media" height="315px" src="https://www.youtube.com/embed/6jKdeP3tkfI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p style="margin-bottom: 10px; margin-top: 10px"><a href="media/Project.gba" class="accent-header">Click here to Download Casanova</a> (You will need an emulator such as <a href="http://openemu.org/">OpenEmu</a> to play it)</p>
-                <p class="accent-second-header"><a href="https://github.com/cs2261-gt/final-project-jtaetle">Click Here to View GitHub Repository</a></p>
-            </div>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">jessicataetle.github.io</h2>
+                    <p style="margin-bottom: 5px">This website is a project for my Introduction to Computational Media class that I will continue to add to throughout the semester. Right now, it is purely HTML and CSS, but I hope to add in some React.js and Redux.js components as I continue to to develop it!</p>
+                    <p class="accent-second-header"><a href="https://github.com/jessicataetle/jessicataetle.github.io">Click here to view Github Repository</a></p>
+                </div>
+            </section>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">Casanova</h2>
+                    <p>For my Media Device Architecture class, the final project was to make a Game Boy Advance game in C. I chose to create Casanova, which is a game based on a bird "casanova" looking for love. Here is the video presentation of me playing the game and explaining it in more detail:</p>
+                    <iframe class="portfolio-media" height="315px" src="https://www.youtube.com/embed/6jKdeP3tkfI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p style="margin-bottom: 10px; margin-top: 10px"><a href="media/Project.gba" class="accent-header">Click here to Download Casanova</a> (You will need an emulator such as <a href="http://openemu.org/">OpenEmu</a> to play it)</p>
+                    <p class="accent-second-header"><a href="https://github.com/cs2261-gt/final-project-jtaetle">Click Here to View GitHub Repository</a></p>
+                </div>
+            </section>
             <h2 class="portfolio-section-header">Design</h2>
-            <div class="section">
-                <h2 class="section-header">Eugie Award Title Cards</h2>
-                <p>I work in a science fiction lab at Georgia Tech, and part of the work we do is creating media for well known science fiction companies and awards. For DragonCon 2020, because it was virtual, we were tasked with creating a video presenting The Eugie Award, which is presented to an author who wrote the best piece of innovative fiction that year.</p>
-                <p>&nbsp;</p>
-                <p>I was tasked with creating a title card for the award using Adobe Photoshop, which is pictured below. I was inspired by the flowing nature of the Eugie Award logo as well as the borders featured in old film title cards. I also created author cards for each of the nominees for The Eugie Award that complimented the title card. Each author card centered visually more around the story and less around the author because the Eugie Award is less about the authors and more focussed on the story.</p>
-                <h3 class="portfolio-media-header">Title Card:</h3>
-                <img src="media/eugieawardfinal.jpg" class='portfolio-media'/>
-                <h3 class="portfolio-media-header">Author Card:</h3>
-                <img src="media/eugieawardauthorcardscarroll.jpg" class='portfolio-media'/>
-                <p style="margin-bottom: 10px; margin-top: 10px"><a href="https://www.youtube.com/watch?v=bahOebqUTkg&feature=emb_title" class="accent-second-header">Click here to Watch The Eugie Award Program 2020</a></p>
-            </div>
-        </div>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">Eugie Award Title Cards</h2>
+                    <p>I work in a science fiction lab at Georgia Tech, and part of the work we do is creating media for well known science fiction companies and awards. For DragonCon 2020, because it was virtual, we were tasked with creating a video presenting The Eugie Award, which is presented to an author who wrote the best piece of innovative fiction that year.</p>
+                    <p>&nbsp;</p>
+                    <p>I was tasked with creating a title card for the award using Adobe Photoshop, which is pictured below. I was inspired by the flowing nature of the Eugie Award logo as well as the borders featured in old film title cards. I also created author cards for each of the nominees for The Eugie Award that complimented the title card. Each author card centered visually more around the story and less around the author because the Eugie Award is less about the authors and more focussed on the story.</p>
+                    <h3 class="portfolio-media-header">Title Card:</h3>
+                    <img src="media/eugieawardfinal.jpg" class='portfolio-media'/>
+                    <h3 class="portfolio-media-header">Author Card:</h3>
+                    <img src="media/eugieawardauthorcardscarroll.jpg" class='portfolio-media'/>
+                    <p style="margin-bottom: 10px; margin-top: 10px"><a href="https://www.youtube.com/watch?v=bahOebqUTkg&feature=emb_title" class="accent-second-header">Click here to Watch The Eugie Award Program 2020</a></p>
+                </div>
+            </section>
+        </article>
     </body>
 </html>
