--- a/contact.html
+++ b/contact.html
@@ -7,21 +7,37 @@
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Jessica Taetle</h1>
-        <ul class="nav">
-            <h2 class="header"><a href="index.html" style="text-decoration: none, color">JT</a></h2>
-            <li class="nav active"><a href="contact.html">Contact</a></li>
-            <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
-            <li class="nav nav-element"><a href="resume.html">Resume</a></li>
-            <li class="nav nav-element"><a href="index.html">Home</a></li>
-        </ul>
-        <div class="section">
-            <h2 class="section-header">Email </h2>
-            <p>My Email is <a href="mailto:jtaetle@gatech.edu">jtaetle@gatech.edu</a>. Please email for any business inquiries!</p>
-        </div>
-        <div class="section">
-            <h2 class="section-header">Social Media </h2>
-            <p>Please add me as a connection on <a href="https://www.linkedin.com/in/jessica-taetle-32b390163/">LinkedIn</a>, and feel free to look at my <a href="https://github.com/jessicataetle">GitHub</a> to keep up to date with my current projects! </p>
-        </div>
+        <header>
+            <h1>Jessica Taetle</h1>
+        </header>
+        <nav>
+             <ul class="nav">
+                <h2 class="header"><a href="index.html">JT</a></h2>
+                <li class="nav active"><a href="contact.html">Contact</a></li>
+                <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
+                <li class="nav nav-element"><a href="resume.html">Resume</a></li>
+                <li class="nav nav-element"><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+        <article>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">Email </h2>
+                    <p>My Email is <a href="mailto:jtaetle@gatech.edu">jtaetle@gatech.edu</a>. Please email for any business inquiries!</p>
+                </div>
+            </section>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">LinkedIn </h2>
+                    <p>Please add me as a connection on <a href="https://www.linkedin.com/in/jessica-taetle-32b390163/">LinkedIn</a>!
+                </div>
+            </section>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">GitHub</h2>
+                    <p>feel free to look at my <a href="https://github.com/jessicataetle">GitHub</a> to keep up to date with my current projects!</p>
+                </div>
+            </section>
+        </article>
     </body>
 </html>
