--- a/resume.html
+++ b/resume.html
@@ -7,72 +7,89 @@
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Jessica Taetle</h1>
-        <ul class="nav">
-            <h2 class="header"><a href="index.html" style="text-decoration: none, color">JT</a></h2>
-            <li class="nav nav-element"><a href="contact.html">Contact</a></li>
-            <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
-            <li class="nav active"><a href="resume.html">Resume</a></li>
-            <li class="nav nav-element"><a href="index.html">Home</a></li>
-        </ul>
-        <div class="section">
-            <h2 class="section-header">Objective: </h2>
-            <p>To further my software development skills or design skills and gain practical real-world experience by securing a challenging internship in Summer 2021.</p>
-        </div>
-        <div class="section">
-            <h2 class="section-header">Education: </h2>
-            <p class="accent-header">[UNDERGRADUATE DEGREE]</p>
-            <p class="accent-second-header">[GEORGIA INSTITUTE OF TECHNOLOGY. GPA: 3.52]</p>
-            <p>[ 2017 - 2022 ] | [ Atlanta, Georgia ]</p>
-            <p>Computational Media Major.</p>
-            <p>Concentrations: People and Interaction Design</p>
-            <p>Relevant Coursework: Data Structures and Algorithms, Introduction to Object-Oriented Programming, Media Device Architecture, Introduction to Computational Media, Junior Design</p>
-            <p>&nbsp;</p>
-            <p class="accent-header">[HIGH SCHOOL]</p>
-            <p class="accent-second-header">[THE GALLOWAY SCHOOL. GPA: 4.1]</p>
-            <p>[ 2010 - 2017 ] | [ Atlanta, Georgia ]</p>
-            <p>The Galloway School school is an independent, coed school in Atlanta, Georgia. In high school, I took computer science classes in Python and HTML/CSS that were the foundations for my interest in computer science.</p>
-        </div>
-        <div class="section">
-            <h2 class="section-header">Experience: </h2>
-             <p class="accent-header">[SOFTWARE ENGINEERING INTERN]</p>
-            <p class="accent-second-header">[RED CANARY]</p>
-            <p>[ MAY 2020 - AUGUST 2020 ] | [ Denver, Colorado ]</p>
-            <p>Red Canary is an outcome-focused security operations partner for modern teams, deployed in minutes to reduce rick and improve security. During my time as an intern, I improved Red Canary's testing framework using RSpec so that unreliable tests would fail less often. In addition, I regularly handled GitHub issues that were assigned to me including: making the Red Canary logo compatible with dark mode, removing the linkage between Red Canary accounts and depreciated salesforce data, and fixing the timing of provisioning emails to clients.</p>
-            <p>&nbsp;</p>
-            <p class="accent-header">[ENGINEERING CO-OP]</p>
-            <p class="accent-second-header">[FULLSTORY]</p>
-            <p>[ JANUARY 2019 - DECEMBER 2019 ] | [ Atlanta, Georgia ]</p>
-            <p>FullStory offers digital experience analytics, on-the-fly conversion funnels, advanced search capabilities, video-like replay of real user sessions, and robust debugging and developer tools. During my time as a Co-Op, I designed a program to track deployments of new code via Go using the API of GitHub, Slack, and Google Sheets. Furthermore, I implemented several UI components in React, and assisted in converting the entire front end framework to React.</p>
-        </div>
-        <div class="section">
-            <h2 class="section-header">Skills:</h2>
-            <p class="accent-second-header">[PROFICIENT]</p>
-            <ul>
-                <li>React.js</li>
-                <li>Redux.js</li>
-                <li>HTML 5</li>
-                <li>CSS</li>
-                <li>Java</li>
-                <li>Adobe Photoshop</li>
-                <li>Git</li>
+        <header>
+            <h1>Jessica Taetle</h1>
+        </header>
+        <nav>
+             <ul class="nav">
+                <h2 class="header"><a href="index.html">JT</a></h2>
+                <li class="nav nav-element"><a href="contact.html">Contact</a></li>
+                <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
+                <li class="nav active"><a href="resume.html">Resume</a></li>
+                <li class="nav nav-element"><a href="index.html">Home</a></li>
             </ul>
-            <p class="accent-second-header">[COMPETENT] </p>
-            <ul>
-                <li>Python</li>
-                <li>Ruby on Rails</li>
-                <li>Go</li>
-            </ul>
-        </div>
-        <div class="section">
-            <h2 class="section-header">Activities:</h2>
-            <p class="accent-header">[BACKPACKING INSTRUCTOR]</p>
-            <p class="accent-second-header">[OUTDOOR RECREATION AT GEORGIA TECH]</p>
-            <p>In the process of learning how to lead participants on backpacking trips in the Southeastern United States. The training includes teaching outdoor skills to the Georgia Tech community, and also working to mitigate outdoor risks by actively educating fellow staff and participants.</p>
-            <p>&nbsp;</p>
-            <p class="accent-header">[AMBASSADOR]</p>
-            <p class="accent-second-header">[COMPUTATIONAL MEDIA ("CM") AMBASSADOR]</p>
-            <p> The CM Ambassadors serve as the voice of current and potential new Computational Media students. Our mission is to improve the CM curriculum and community.  The CM’s ambassador role includes representing concerns, building awareness of events and opportunities, bridging the gap between faculty and students, and unifying the student body.</p>
-        </div>
+        </nav>
+        <article>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">Objective: </h2>
+                    <p>To further my software development skills or design skills and gain practical real-world experience by securing a challenging internship in Summer 2021.</p>
+                </div>
+            </section>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">Education: </h2>
+                    <p class="accent-header">[UNDERGRADUATE DEGREE]</p>
+                    <p class="accent-second-header">[GEORGIA INSTITUTE OF TECHNOLOGY. GPA: 3.52]</p>
+                    <p>[ 2017 - 2022 ] | [ Atlanta, Georgia ]</p>
+                    <p>Computational Media Major.</p>
+                    <p>Concentrations: People and Interaction Design</p>
+                    <p>Relevant Coursework: Data Structures and Algorithms, Introduction to Object-Oriented Programming, Media Device Architecture, Introduction to Computational Media, Junior Design</p>
+                    <p>&nbsp;</p>
+                    <p class="accent-header">[HIGH SCHOOL]</p>
+                    <p class="accent-second-header">[THE GALLOWAY SCHOOL. GPA: 4.1]</p>
+                    <p>[ 2010 - 2017 ] | [ Atlanta, Georgia ]</p>
+                    <p>The Galloway School school is an independent, coed school in Atlanta, Georgia. In high school, I took computer science classes in Python and HTML/CSS that were the foundations for my interest in computer science.</p>
+                </div>
+            </section>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">Experience: </h2>
+                    <p class="accent-header">[SOFTWARE ENGINEERING INTERN]</p>
+                    <p class="accent-second-header">[RED CANARY]</p>
+                    <p>[ MAY 2020 - AUGUST 2020 ] | [ Denver, Colorado ]</p>
+                    <p>Red Canary is an outcome-focused security operations partner for modern teams, deployed in minutes to reduce rick and improve security. During my time as an intern, I improved Red Canary's testing framework using RSpec so that unreliable tests would fail less often. In addition, I regularly handled GitHub issues that were assigned to me including: making the Red Canary logo compatible with dark mode, removing the linkage between Red Canary accounts and depreciated salesforce data, and fixing the timing of provisioning emails to clients.</p>
+                    <p>&nbsp;</p>
+                    <p class="accent-header">[ENGINEERING CO-OP]</p>
+                    <p class="accent-second-header">[FULLSTORY]</p>
+                    <p>[ JANUARY 2019 - DECEMBER 2019 ] | [ Atlanta, Georgia ]</p>
+                    <p>FullStory offers digital experience analytics, on-the-fly conversion funnels, advanced search capabilities, video-like replay of real user sessions, and robust debugging and developer tools. During my time as a Co-Op, I designed a program to track deployments of new code via Go using the API of GitHub, Slack, and Google Sheets. Furthermore, I implemented several UI components in React, and assisted in converting the entire front end framework to React.</p>
+                </div>
+            </section>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">Skills:</h2>
+                    <p class="accent-second-header">[PROFICIENT]</p>
+                    <ul>
+                        <li>React.js</li>
+                        <li>Redux.js</li>
+                        <li>HTML 5</li>
+                        <li>CSS</li>
+                        <li>Java</li>
+                        <li>C</li>
+                        <li>Adobe Photoshop</li>
+                        <li>Git</li>
+                    </ul>
+                    <p class="accent-second-header">[COMPETENT] </p>
+                    <ul>
+                        <li>Python</li>
+                        <li>Ruby on Rails</li>
+                        <li>Go</li>
+                    </ul>
+                </div>
+            </section>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">Activities:</h2>
+                    <p class="accent-header">[BACKPACKING INSTRUCTOR]</p>
+                    <p class="accent-second-header">[OUTDOOR RECREATION AT GEORGIA TECH]</p>
+                    <p>In the process of learning how to lead participants on backpacking trips in the Southeastern United States. The training includes teaching outdoor skills to the Georgia Tech community, and also working to mitigate outdoor risks by actively educating fellow staff and participants.</p>
+                    <p>&nbsp;</p>
+                    <p class="accent-header">[AMBASSADOR]</p>
+                    <p class="accent-second-header">[COMPUTATIONAL MEDIA ("CM") AMBASSADOR]</p>
+                    <p> The CM Ambassadors serve as the voice of current and potential new Computational Media students. Our mission is to improve the CM curriculum and community.  The CM’s ambassador role includes representing concerns, building awareness of events and opportunities, bridging the gap between faculty and students, and unifying the student body.</p>
+                </div>
+            </section>
+        </article>
     </body>
 </html>
