add snake game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,17 @@
                     <h2 class="section-header">Casanova</h2>
                     <p>For my Media Device Architecture class, the final project was to make a Game Boy Advance game in C. I chose to create Casanova, which is a game based on a bird "casanova" looking for love. Here is the video presentation of me playing the game and explaining it in more detail:</p>
                     <iframe class="portfolio-media" height="315px" src="https://www.youtube.com/embed/6jKdeP3tkfI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p style="margin-bottom: 10px; margin-top: 10px"><a href="media/Project.gba" class="accent-header">Click here to Download Casanova</a> (You will need an emulator such as <a href="http://openemu.org/">OpenEmu</a> to play it)</p>
+                    <p style="margin-bottom: 10px; margin-top: 10px"><a href="media/Casanova.gba" class="accent-header">Click here to Download Casanova</a> (You will need an emulator such as <a href="http://openemu.org/">OpenEmu</a> to play it)</p>
                     <p class="accent-second-header"><a href="https://github.com/cs2261-gt/final-project-jtaetle">Click Here to View GitHub Repository</a></p>
+                </div>
+            </section>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">Snake</h2>
+                    <p>Another Game Boy Advance game that I coded in C was a basic snake game. Based off of the popular game Snake, the user plays as a snake trying to collect 10 apples in order to win the game. Here is a video demo I did explaining how to play the game:</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NE9ayP7qqko" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p style="margin-bottom: 10px; margin-top: 10px"><a href="media/Snake.gba" class="accent-header">Click here to Download Snake</a> (You will need an emulator such as <a href="http://openemu.org/">OpenEmu</a> to play it)</p>
+                    <p class="accent-second-header"><a href="https://github.com/jessicataetle/cs2261-snake-game">Click Here to View GitHub Repository</a></p>
                 </div>
             </section>
             <h2 class="portfolio-section-header">Design</h2>
