home page text wraparound

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <section>
                 <div class="section" style="display: table">
                     <img src="media/78122771_2403486773092967_5219476581470175232_n.jpg" class="center-image"/>
-                    <div style="float: left; width: 50%; margin-right: 0px" >
+                    <div style="margin-right: auto;" >
                         <h3 class="home-second-header">Hello! My name is Jessica Taetle.</h3>
                         <p>I am a fourth year at the Georgia Institute of Technology, and my anticipated graduation date is May, 2022.</p>
                         <h3 class="home-second-header">I am a Computational Media Major.</h3>
